# incolumepy.gwa

./: COMMITS.md  Makefile  README.md  index.md  pyproject.toml
.git-hooks/: pre-commit  pre-push  prepare-commit-msg
.github/workflows/: gwa-flow.yml  gwa-release.yml  poetry-mine-publish-automatically.yml  poetry-mine-pypi-autopublish.yml  poetry-mine-testpypi-autopublish.yml  poetry-multiprocess.yml  poetry-publish-automatically.yml  poetry-testpypi-manual-publish.yml  publish-automatically.yml  publish-automaticly.yml  publish-release.yml  publish_manual.yml  publish_python_distributions_pypi_testpypi.yml  python-publish.yml  targged-release.yaml  tests_ci_cd.yaml  tests_new.yml
incolumepy/gwa/: __init__.py  hello.py  version.txt
tests/: __init__.py  test_incolumepy_gwa.py
