[tool.poetry]
name = "incolumepy.gwa"
version = "0.1.0-a0"
description = "Prospections from Github Workflows Actions"
authors = ["Britodfbr <britodfbr@gmail.com>"]
license = "BSD 2-Clause License"
packages=[
    {include = 'incolumepy/gwa', from=''},
]

[tool.poetry.dependencies]
python = ">=3.6.8,<4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
mypy = "^0.910"
black = "^21.12b0"
flake8 = "^4.0.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=incolumepy.gwa"
testpaths = [
  "tests",
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 160

[tool.pylint.basic]
# Allow shorter and longer variable names than the default.
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"

# Ensure that orjson is analysed as a C extension by pylint.
extension-pkg-whitelist = "orjson"

[tool.pylint.messages_control]
disable = [
    # Disable too many and too few checks.
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "too-few-public-methods",

    # Similar lines in files (often the case in tests).
    "duplicate-code",

    # Many functions (e.g. callbacks) will naturally have unused arguments.
    "unused-argument",

    # Disable checking that method could be a function in classes (often used for organisation).
    "no-self-use",

    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    # Disable docstrings checks as we don't require excessive documentation.
    "missing-docstring",

    "no-member",
    "unspecified-encoding",
]
